- fix anova_rptd problem depending on grouping of IVs (part of RT#97925)
- do all plotting with PDL::Graphics::Simple
- add Basic::code_ivs
- all OLS and ANOVA now add the 1s column in design at pos 0 so intercepts now B_0

0.853 2025-01-03
- uses PDL 2.096+ lib/*.pd format for quicker builds

0.852 2024-12-28
- no longer uses PDL::Slatec

0.851 2024-12-27
- relax the tests' type requirement

0.850 2024-12-27
- removed TS::inte (identical to cumusumover)
- moved TS::diff (unused here) to Ufunc
- move PDL::Stats::Distr into PDL::GSL since needs GSL
- minimum 5.16 as some 5.15 broke PDL::Stats (https://github.com/Perl/perl5/issues/11835)
- fix unnecessary type-specs that cause problems for Inplace (https://github.com/PDLPorters/pdl/issues/511)

0.84 2024-05-27
- effect_code exception if only one unique value
- fix for Distr so M_PI found - thanks @shawnlaffan

0.83 2023-04-01
- install pdldoc using PDL::Doc

0.82 2022-05-23
- dodge false-negative on NiceSlice

0.81 2022-01-11
- fix Kmeans NiceSlice for PDL 2.066

0.80 2021-10-02
- add COV option to GLM::logistic - thanks David Myers for suggestion (in 2011)
- make all PLOT options default to off; only load PGPLOT when try to use
- remove plot_season and dsea deprecated since 0.5.0
- effect_code and iv_cluster now don't croak on multi-dim inputs
- opt in to upcoming PDL multi-C feature

0.79 2021-08-17
- update now that PDL's ->sum etc return ndarrays, not Perl scalars

0.78 2021-04-24
- update build to avoid false positives for working CDF library

0.77 2021-04-20
- moved the GSL CDF functions over to main PDL - thanks @maggiexyz!

0.76 2020-12-19
- spelling fixes - thanks @sebastic

0.75 2016-05-30
  - no change from 0.74_1

0.74_1 2016-05-28
  - build updates

0.74 Fri Dec 4 22:09:47 2015 -0500
  - no change from 0.73_1

0.73_1 Sun Nov 29 10:15:44 2015 -0500
  - Improved support for 64bit indexing (kmx)
  - PDL::GSL::CDF facelift (kmx)
  - kmeans test workaround (kmx)
  - messages for various tests (kaoru)