@@ -4,7 +4,7 @@ use warnings;
 my $F = [qw(F D)];
 
 pp_add_exported(qw(ols_t ols ols_rptd
-  anova anova_rptd
+  anova anova_rptd anova_design_matrix
   dummy_code effect_code effect_code_w interaction_code
   r2_change logistic
   pca pca_sorti
@@ -881,9 +881,7 @@ squared error from the anova, ie it is pooled across levels of the effect.
 Will only calculate p-value (C<F_p>) if there are more samples than the
 product of categories of all the IVs.
 
-anova_rptd supports bad value in the dependent and independent
-variables. It automatically removes bad data listwise, ie remove a
-subject's data if there is any cell missing for the subject.
+Uses L</anova_design_matrix>, so supports bad values.
 
 =for options
 
@@ -1006,12 +1004,9 @@ sub PDL::anova_rptd {
   confess "Expected 1-D data, instead: ", $y->info if $y->ndims != 1;
   croak "Mismatched number of elements in DV and IV. Are you passing IVs the old-and-abandoned way?"
     if (ref $ivs_raw[0] eq 'ARRAY') and (@{ $ivs_raw[0] } != $y->nelem);
-
   for (@ivs_raw) {
-    croak "too many dims in IV!"
-      if ref $_ eq 'PDL' and $_->squeeze->ndims > 1
+    croak "too many dims in IV!" if ref $_ eq 'PDL' and $_->squeeze->ndims > 1
   }
-
   my %opt = (
     V      => 1,    # carps if bad value in dv
     IVNM   => [],   # auto filled as ['IV_0', 'IV_1', ... ]
@@ -1024,70 +1019,20 @@ sub PDL::anova_rptd {
   if ($opt) { $opt{uc $_} = $opt->{$_} for keys %$opt; }
   $opt{IVNM} = [ map { "IV_$_" } 0 .. $#ivs_raw ]
     if !$opt{IVNM} or !@{ $opt{IVNM} };
-  my @idv_orig = @{ $opt{IVNM} };
-
-  $y = $y->squeeze;
-  my @pdl_ivs_raw = map scalar PDL::Stats::Basic::code_ivs($_), @ivs_raw;
-  my $pdl_ivs_raw = pdl \@pdl_ivs_raw;
-    # explicit set badflag because pdl() removes badflag
-  $pdl_ivs_raw->badflag( scalar grep { $_->badflag } @pdl_ivs_raw );
-  my $sj;
-  if (defined($subj)) {
-    # delete bad data listwise ie remove subj if any cell missing
-    $sj = PDL::Stats::Basic::code_ivs($subj);
-    my $ibad = which( $y->isbad | nbadover($pdl_ivs_raw->transpose) );
-    my $sj_bad = $sj->slice($ibad)->uniq;
-    if ($sj_bad->nelem) {
-      warn $sj_bad->nelem . " subjects with missing data removed\n"
-        if $opt{V};
-      $sj = $sj->setvaltobad($_)
-        for (list $sj_bad);
-      my $igood = which $sj->isgood;
-      for ($y, $sj, @pdl_ivs_raw) {
-        $_ = $_->slice( $igood )->sever;
-        $_->badflag(0);
-      }
-    }
-  } else {
-    ($y, $pdl_ivs_raw) = _rm_bad_value( $y, $pdl_ivs_raw );
-    if ($opt{V} and $y->nelem < $pdl_ivs_raw[0]->nelem) {
-      warn sprintf "%d subjects with missing data removed\n", $pdl_ivs_raw[0]->nelem - $y->nelem;
-    }
-    @pdl_ivs_raw = $pdl_ivs_raw->dog;
-  }
-
-    # code for ivs and cell mean in diff @s: effect_code vs iv_cluster
-  my @ivs_ref_orig = map scalar effect_code($_), @pdl_ivs_raw;
-
-  my ($ivs_inter_ref, $idv_inter) = _interactions(\@ivs_ref_orig, \@idv_orig);
-  # append inter info to main effects
-  my $ivs_ref = [@ivs_ref_orig, @$ivs_inter_ref];
-  my @idv = (@idv_orig, @$idv_inter);
-
-    # matches $ivs_ref, with an extra last pdl for subj effect
-  my $err_ref = !defined($subj) ? [] :
-    _add_errors( $sj, $ivs_ref, \@idv, \@pdl_ivs_raw, $opt{BTWN} );
-  for (grep ref $err_ref->[$_], 0..$#$err_ref) {
-    my ($null_row_ids, $non_null_row_ids) = $err_ref->[$_]->zcover->which_both;
-    confess "got null rows $null_row_ids in error entry #$_ ($idv[$_])"
-      if !$null_row_ids->isempty;
-  }
-
-    # stitch together
-  my $ivs = ones($y->dim(0))->glue(1, @$ivs_ref, grep ref($_), @$err_ref);
+  (my ($dsgn, $idv), $y, my ($sj, $ivs_ref_filtrd, $pdl_ivs_raw, $ivs_ref, $err_ref)) = $y->anova_design_matrix($subj, @ivs_raw, \%opt);
   confess "anova_rptd: got singular matrix for IVs x IVs'"
-    if any +($ivs x $ivs->t)->det == 0;
-  my $b_full = _ols_main(1, $y, $ivs, {CONST=>0});
+    if any +($dsgn->t x $dsgn)->det == 0;
+  my $b_full = _ols_main(1, $y, $dsgn->t, {CONST=>0});
 
   my %ret = (ss_total => $y->ss,
-    ss_residual => $y->sse( sumover( $b_full * $ivs->t ) ));
+    ss_residual => $y->sse( sumover( $b_full * $dsgn ) ));
 
   if (defined $subj) {
     my @full = (@$ivs_ref, @$err_ref);
     EFFECT: for my $k (0 .. $#full) {
       my $e = ($k > $#$ivs_ref)?  '| err' : '';
       my $i = ($k > $#$ivs_ref)?  $k - @$ivs_ref : $k;
-      my $i_pref = $k == $#full ? undef : "| $idv[$i] |";
+      my $i_pref = $k == $#full ? undef : "| $idv->[$i] |";
 
       if (!defined $full[$k]) {     # ss_residual as error
         $ret{ "$i_pref$e ss" } = $ret{ss_residual};
@@ -1110,56 +1055,56 @@ sub PDL::anova_rptd {
         }
       } else {                        # repeating error term
         my $ss = $ret{$k == $#full ? 'ss_subject' : "$i_pref$e ss"}
-          = $ret{"| $idv[$full[$k]] |$e ss"};
+          = $ret{"| $idv->[$full[$k]] |$e ss"};
         if ($k != $#full) {
-          my $df = $ret{"$i_pref$e df"} = $ret{"| $idv[$full[$k]] |$e df"};
+          my $df = $ret{"$i_pref$e df"} = $ret{"| $idv->[$full[$k]] |$e df"};
           $ret{"$i_pref$e ms"} = $ss / $df;
         }
       }
     }
   } else {
     $ret{ss_model} = $ret{ss_total} - $ret{ss_residual};
-    $ret{F_df} = pdl(my $F_df0 = $ivs->dim(1) - 1, my $df1 = $y->nelem - $ivs->dim(1));
+    $ret{F_df} = pdl(my $F_df0 = $dsgn->dim(0) - 1, my $df1 = $y->nelem - $dsgn->dim(0));
     $ret{ms_model} = $ret{ss_model} / $F_df0;
     $ret{ms_residual} = $ret{ss_residual} / $df1;
     $ret{F} = $ret{ms_model} / $ret{ms_residual};
     $ret{F_p} = 1 - $ret{F}->gsl_cdf_fdist_P( $F_df0, $df1 )
       if $CDF and $df1 > 0;
 
-    # get IV ss from $ivs_ref instead of $ivs pdl
+    # get IV ss from $ivs_ref instead of $dsgn pdl
     my $ones = ones($y->dim(0));
     for my $k (0 .. $#$ivs_ref) {
       my $G = $ones->glue(1, @$ivs_ref[grep $_ != $k, 0 .. $#$ivs_ref]);
       my $b_G = $y->ols_t( $G, {CONST=>0} );
-      $ret{ "| $idv[$k] | ss" }
+      $ret{ "| $idv->[$k] | ss" }
         = $y->sse( sumover($b_G * $G->transpose) ) - $ret{ss_residual};
-      my $df0 = $ret{ "| $idv[$k] | df" } = $ivs_ref->[$k]->dim(1);
-      $ret{ "| $idv[$k] || err df" } = $df1;
-      $ret{ "| $idv[$k] | ms" } = $ret{ "| $idv[$k] | ss" } / $df0;
+      my $df0 = $ret{ "| $idv->[$k] | df" } = $ivs_ref->[$k]->dim(1);
+      $ret{ "| $idv->[$k] || err df" } = $df1;
+      $ret{ "| $idv->[$k] | ms" } = $ret{ "| $idv->[$k] | ss" } / $df0;
     }
   }
     # have all iv, inter, and error effects. get F and F_p
   for (0 .. $#$ivs_ref) {
-    my $ms_residual = defined $subj ? $ret{ "| $idv[$_] || err ms" } : $ret{ms_residual};
-    my ($df0, $df1) = @ret{"| $idv[$_] | df" , "| $idv[$_] || err df"};
-    my $F = $ret{ "| $idv[$_] | F" } = $ret{ "| $idv[$_] | ms" } / $ms_residual;
-    $ret{ "| $idv[$_] | F_p" } = 1 - $F->gsl_cdf_fdist_P($df0, $df1)
+    my $ms_residual = defined $subj ? $ret{ "| $idv->[$_] || err ms" } : $ret{ms_residual};
+    my ($df0, $df1) = @ret{"| $idv->[$_] | df" , "| $idv->[$_] || err df"};
+    my $F = $ret{ "| $idv->[$_] | F" } = $ret{ "| $idv->[$_] | ms" } / $ms_residual;
+    $ret{ "| $idv->[$_] | F_p" } = 1 - $F->gsl_cdf_fdist_P($df0, $df1)
       if $CDF and $df1 > 0;
   }
 
   for (keys %ret) {ref $ret{$_} eq 'PDL' and $ret{$_} = $ret{$_}->squeeze};
 
   my ($inter_cmo_ref, $inter_cm_ref)
-    = _interactions_cm(\@ivs_ref_orig, \@pdl_ivs_raw);
+    = _interactions_cm($ivs_ref_filtrd, $pdl_ivs_raw);
   # append inter info to cell means effects
-  my $ivs_cm_ref = [@ivs_ref_orig, @$inter_cm_ref];
-  my @i_cmo_ref = map pdl(values %{ (effect_code($_))[1] })->qsort, @pdl_ivs_raw;
+  my $ivs_cm_ref = [@$ivs_ref_filtrd, @$inter_cm_ref];
+  my @i_cmo_ref = map pdl(values %{ (effect_code($_))[1] })->qsort, @$pdl_ivs_raw;
   push @i_cmo_ref, @$inter_cmo_ref;
 
   my $cm_ref
-    = _cell_means( $y, $ivs_cm_ref, \@i_cmo_ref, \@idv, \@pdl_ivs_raw );
+    = _cell_means( $y, $ivs_cm_ref, \@i_cmo_ref, $idv, $pdl_ivs_raw );
   if (defined $subj) {
-    my @ls = map { $_->uniq->nelem } @pdl_ivs_raw;
+    my @ls = map { $_->uniq->nelem } @$pdl_ivs_raw;
     $cm_ref
       = _fix_rptd_se( $cm_ref, \%ret, $opt{IVNM}, \@ls, $sj->uniq->nelem );
   }
@@ -1168,10 +1113,108 @@ sub PDL::anova_rptd {
 
   my $highest = join(' ~ ', @{ $opt{IVNM} });
   $cm_ref->{"# $highest # m"}->plot_means( $cm_ref->{"# $highest # se"},
-                                           { %opt, IVNM=>\@idv } )
+                                           { %opt, IVNM=>$idv } )
     if $opt{PLOT};
 
   %ret;
+}
+
+=head2 anova_design_matrix
+
+=for ref
+
+Effect-coded design matrix for anova, including repeated-measures and
+mixed-model.
+
+Added in 0.854.
+
+Supports bad value in the dependent and independent variables. It
+automatically removes bad data listwise, i.e. remove a subject's data if
+there is any cell missing for the subject.
+
+=for options
+
+Default options (case insensitive):
+
+    V      => 1,    # carps if bad value in dv
+    IVNM   => [],   # auto filled as ['IV_0', 'IV_1', ... ]
+    BTWN   => [],   # indices of between-subject IVs (matches IVNM indices)
+
+=for usage
+
+  $matrix = $dv->anova_design_matrix(undef, $b, $w, {ivnm=>[qw(b w)]});
+  $matrix = $dv->anova_design_matrix(
+    $subj, $b, $w, {ivnm=>[qw(b w)]}); # repeated-measures
+  $matrix = $dv->anova_design_matrix(
+    $subj, $b, $w, {ivnm=>[qw(b w)], btwn=>['b']}); # mixed-model
+  ($matrix, $ivnm_ref) = $dv->anova_design_matrix(
+    $subj, $b, $w, {ivnm=>[qw(b w)], btwn=>['b']}); # list context also names
+
+=cut
+
+*anova_design_matrix = \&PDL::anova_design_matrix;
+sub PDL::anova_design_matrix {
+  my $opt = ref($_[-1]) eq 'HASH' ? pop @_ : undef;
+  my ($y, $subj, @ivs_raw) = @_;
+  confess "No IVs: did you omit 'undef' for anova?" if !@ivs_raw;
+  confess "Expected 1-D data, instead: ", $y->info if $y->ndims != 1;
+  for (@ivs_raw) {
+    croak "too many dims in IV!" if ref $_ eq 'PDL' and $_->squeeze->ndims > 1;
+  }
+  my %opt = (
+    V      => 1,    # carps if bad value in dv
+    IVNM   => [],   # auto filled as ['IV_0', 'IV_1', ... ]
+    ( !defined($subj) ? () : (
+    BTWN   => [],   # indices of between-subject IVs (matches IVNM indices)
+    )),
+  );
+  if ($opt) { $opt{uc $_} = $opt->{$_} for keys %$opt; }
+  $opt{IVNM} = [ map { "IV_$_" } 0 .. $#ivs_raw ]
+    if !$opt{IVNM} or !@{ $opt{IVNM} };
+  my @idv_orig = @{ $opt{IVNM} };
+  my @pdl_ivs_raw = map scalar PDL::Stats::Basic::code_ivs($_), @ivs_raw;
+  my $pdl_ivs = pdl \@pdl_ivs_raw;
+    # explicit set badflag because pdl() removes badflag
+  $pdl_ivs->badflag( scalar grep $_->badflag, @pdl_ivs_raw );
+  my $sj;
+  if (defined($subj)) {
+    # delete bad data listwise ie remove subj if any cell missing
+    $sj = PDL::Stats::Basic::code_ivs($subj);
+    my $ibad = which( $y->isbad | nbadover($pdl_ivs->transpose) );
+    my $sj_bad = $sj->slice($ibad)->uniq;
+    if ($sj_bad->nelem) {
+      warn $sj_bad->nelem . " subjects with missing data removed\n"
+        if $opt{V};
+      $sj = $sj->setvaltobad($_)
+        for (list $sj_bad);
+      my $igood = which $sj->isgood;
+      for ($y, $sj, @pdl_ivs_raw) {
+        $_ = $_->slice( $igood )->sever;
+        $_->badflag(0);
+      }
+    }
+  } else {
+    ($y, $pdl_ivs) = _rm_bad_value( $y, $pdl_ivs );
+    if ($opt{V} and $y->nelem < $pdl_ivs_raw[0]->nelem) {
+      warn sprintf "%d subjects with missing data removed\n", $pdl_ivs_raw[0]->nelem - $y->nelem;
+    }
+    @pdl_ivs_raw = $pdl_ivs->dog;
+  }
+  my @ivs_ref_fltrd = map scalar effect_code($_), @pdl_ivs_raw;
+  my ($ivs_inter_ref, $idv_inter) = _interactions(\@ivs_ref_fltrd, \@idv_orig);
+  # append inter info to main effects
+  my $ivs_ref = [@ivs_ref_fltrd, @$ivs_inter_ref];
+  my @idv = (@idv_orig, @$idv_inter);
+    # matches $ivs_ref, with an extra last pdl for subj effect
+  my $err_ref = !defined($subj) ? [] :
+    _add_errors( $sj, $ivs_ref, \@idv, \@pdl_ivs_raw, $opt{BTWN} );
+  for (grep ref $err_ref->[$_], 0..$#$err_ref) {
+    my ($null_row_ids, $non_null_row_ids) = $err_ref->[$_]->zcover->which_both;
+    confess "got null rows $null_row_ids in error entry #$_ ($idv[$_])"
+      if !$null_row_ids->isempty;
+  }
+  my $dsgn = PDL::glue(1, ones($y->dim(0)), @$ivs_ref, (grep ref($_), @$err_ref))->t;
+  !wantarray ? $dsgn : ($dsgn, \@idv, $y, $sj, \@ivs_ref_fltrd, \@pdl_ivs_raw, $ivs_ref, $err_ref);
 }
 
 # code (btwn group) subjects. Rutherford (2011) pp 208-209
