@@ -321,13 +321,77 @@ is_pdl $b_bad->dvrs(ones(6) * .5), pdl( 'BAD -1.17741002251547 -1.17741002251547
   my $b = $d % 3;
   my $c = $d % 2;
   $d->set( 20, 10 );
-  my %m = $d->anova(\@a, $b, $c, {IVNM=>[qw(A B C)], plot=>0});
+  my @idv = qw(A B C);
+  my %m = $d->anova(\@a, $b, $c, {IVNM=>\@idv, plot=>0});
   $m{'# A ~ B ~ C # m'} = $m{'# A ~ B ~ C # m'}->slice(',(2),');
   test_stats_cmp(\%m, {
     '| A | F' => 165.252100840336,
     '| A ~ B ~ C | F' => 0.0756302521008415,
     '# A ~ B ~ C # m' => pdl([[qw(8 18 38 53)], [qw(8 23 38 53)]]),
   });
+  my $dsgn = $d->anova_design_matrix(undef, \@a, $b, $c, {IVNM=>\@idv});
+  is_pdl $dsgn, pdl '
+ [1  1  0  0  1  0  1  1  0  0  0  0  0  1  0  0  1  0  1  0  0  0  0  0]
+ [1  1  0  0  0  1 -1  0  0  0  1  0  0 -1  0  0  0 -1  0  0  0 -1  0  0]
+ [1  1  0  0 -1 -1  1 -1  0  0 -1  0  0  1  0  0 -1 -1 -1  0  0 -1  0  0]
+ [1  1  0  0  1  0 -1  1  0  0  0  0  0 -1  0  0 -1  0 -1  0  0  0  0  0]
+ [1  1  0  0  0  1  1  0  0  0  1  0  0  1  0  0  0  1  0  0  0  1  0  0]
+ [1  1  0  0 -1 -1 -1 -1  0  0 -1  0  0 -1  0  0  1  1  1  0  0  1  0  0]
+ [1  1  0  0  1  0  1  1  0  0  0  0  0  1  0  0  1  0  1  0  0  0  0  0]
+ [1  1  0  0  0  1 -1  0  0  0  1  0  0 -1  0  0  0 -1  0  0  0 -1  0  0]
+ [1  1  0  0 -1 -1  1 -1  0  0 -1  0  0  1  0  0 -1 -1 -1  0  0 -1  0  0]
+ [1  1  0  0  1  0 -1  1  0  0  0  0  0 -1  0  0 -1  0 -1  0  0  0  0  0]
+ [1  1  0  0  0  1  1  0  0  0  1  0  0  1  0  0  0  1  0  0  0  1  0  0]
+ [1  1  0  0 -1 -1 -1 -1  0  0 -1  0  0 -1  0  0  1  1  1  0  0  1  0  0]
+ [1  1  0  0  1  0  1  1  0  0  0  0  0  1  0  0  1  0  1  0  0  0  0  0]
+ [1  1  0  0  0  1 -1  0  0  0  1  0  0 -1  0  0  0 -1  0  0  0 -1  0  0]
+ [1  1  0  0 -1 -1  1 -1  0  0 -1  0  0  1  0  0 -1 -1 -1  0  0 -1  0  0]
+ [1  0  1  0  1  0 -1  0  1  0  0  0  0  0 -1  0 -1  0  0 -1  0  0  0  0]
+ [1  0  1  0  0  1  1  0  0  0  0  1  0  0  1  0  0  1  0  0  0  0  1  0]
+ [1  0  1  0 -1 -1 -1  0 -1  0  0 -1  0  0 -1  0  1  1  0  1  0  0  1  0]
+ [1  0  1  0  1  0  1  0  1  0  0  0  0  0  1  0  1  0  0  1  0  0  0  0]
+ [1  0  1  0  0  1 -1  0  0  0  0  1  0  0 -1  0  0 -1  0  0  0  0 -1  0]
+ [1  0  1  0 -1 -1  1  0 -1  0  0 -1  0  0  1  0 -1 -1  0 -1  0  0 -1  0]
+ [1  0  1  0  1  0 -1  0  1  0  0  0  0  0 -1  0 -1  0  0 -1  0  0  0  0]
+ [1  0  1  0  0  1  1  0  0  0  0  1  0  0  1  0  0  1  0  0  0  0  1  0]
+ [1  0  1  0 -1 -1 -1  0 -1  0  0 -1  0  0 -1  0  1  1  0  1  0  0  1  0]
+ [1  0  1  0  1  0  1  0  1  0  0  0  0  0  1  0  1  0  0  1  0  0  0  0]
+ [1  0  1  0  0  1 -1  0  0  0  0  1  0  0 -1  0  0 -1  0  0  0  0 -1  0]
+ [1  0  1  0 -1 -1  1  0 -1  0  0 -1  0  0  1  0 -1 -1  0 -1  0  0 -1  0]
+ [1  0  1  0  1  0 -1  0  1  0  0  0  0  0 -1  0 -1  0  0 -1  0  0  0  0]
+ [1  0  1  0  0  1  1  0  0  0  0  1  0  0  1  0  0  1  0  0  0  0  1  0]
+ [1  0  1  0 -1 -1 -1  0 -1  0  0 -1  0  0 -1  0  1  1  0  1  0  0  1  0]
+ [1  0  0  1  1  0  1  0  0  1  0  0  0  0  0  1  1  0  0  0  1  0  0  0]
+ [1  0  0  1  0  1 -1  0  0  0  0  0  1  0  0 -1  0 -1  0  0  0  0  0 -1]
+ [1  0  0  1 -1 -1  1  0  0 -1  0  0 -1  0  0  1 -1 -1  0  0 -1  0  0 -1]
+ [1  0  0  1  1  0 -1  0  0  1  0  0  0  0  0 -1 -1  0  0  0 -1  0  0  0]
+ [1  0  0  1  0  1  1  0  0  0  0  0  1  0  0  1  0  1  0  0  0  0  0  1]
+ [1  0  0  1 -1 -1 -1  0  0 -1  0  0 -1  0  0 -1  1  1  0  0  1  0  0  1]
+ [1  0  0  1  1  0  1  0  0  1  0  0  0  0  0  1  1  0  0  0  1  0  0  0]
+ [1  0  0  1  0  1 -1  0  0  0  0  0  1  0  0 -1  0 -1  0  0  0  0  0 -1]
+ [1  0  0  1 -1 -1  1  0  0 -1  0  0 -1  0  0  1 -1 -1  0  0 -1  0  0 -1]
+ [1  0  0  1  1  0 -1  0  0  1  0  0  0  0  0 -1 -1  0  0  0 -1  0  0  0]
+ [1  0  0  1  0  1  1  0  0  0  0  0  1  0  0  1  0  1  0  0  0  0  0  1]
+ [1  0  0  1 -1 -1 -1  0  0 -1  0  0 -1  0  0 -1  1  1  0  0  1  0  0  1]
+ [1  0  0  1  1  0  1  0  0  1  0  0  0  0  0  1  1  0  0  0  1  0  0  0]
+ [1  0  0  1  0  1 -1  0  0  0  0  0  1  0  0 -1  0 -1  0  0  0  0  0 -1]
+ [1  0  0  1 -1 -1  1  0  0 -1  0  0 -1  0  0  1 -1 -1  0  0 -1  0  0 -1]
+ [1 -1 -1 -1  1  0 -1 -1 -1 -1  0  0  0  1  1  1 -1  0  1  1  1  0  0  0]
+ [1 -1 -1 -1  0  1  1  0  0  0 -1 -1 -1 -1 -1 -1  0  1  0  0  0 -1 -1 -1]
+ [1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1]
+ [1 -1 -1 -1  1  0  1 -1 -1 -1  0  0  0 -1 -1 -1  1  0 -1 -1 -1  0  0  0]
+ [1 -1 -1 -1  0  1 -1  0  0  0 -1 -1 -1  1  1  1  0 -1  0  0  0  1  1  1]
+ [1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1  1  1  1  1  1  1]
+ [1 -1 -1 -1  1  0 -1 -1 -1 -1  0  0  0  1  1  1 -1  0  1  1  1  0  0  0]
+ [1 -1 -1 -1  0  1  1  0  0  0 -1 -1 -1 -1 -1 -1  0  1  0  0  0 -1 -1 -1]
+ [1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1]
+ [1 -1 -1 -1  1  0  1 -1 -1 -1  0  0  0 -1 -1 -1  1  0 -1 -1 -1  0  0  0]
+ [1 -1 -1 -1  0  1 -1  0  0  0 -1 -1 -1  1  1  1  0 -1  0  0  0  1  1  1]
+ [1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1  1  1  1  1  1  1]
+ [1 -1 -1 -1  1  0 -1 -1 -1 -1  0  0  0  1  1  1 -1  0  1  1  1  0  0  0]
+ [1 -1 -1 -1  0  1  1  0  0  0 -1 -1 -1 -1 -1 -1  0  1  0  0  0 -1 -1 -1]
+ [1 -1 -1 -1 -1 -1 -1  1  1  1  1  1  1  1  1  1  1  1 -1 -1 -1 -1 -1 -1]
+';
 }
 
 { # anova 1 way
@@ -410,7 +474,7 @@ is_pdl $b_bad->dvrs(ones(6) * .5), pdl( 'BAD -1.17741002251547 -1.17741002251547
   #  Certified R-Squared 4.82758620689655E-01
   #  Certified Residual
   #  Standard Deviation  1.00000000000000E-01
-  my $data = pdl '[
+  my $data = pdl('[
    [1.4 1.3 1.5 1.3 1.5 1.3 1.5 1.3 1.5]
    [1.3 1.2 1.4 1.2 1.4 1.2 1.4 1.2 1.4]
    [1.5 1.4 1.6 1.4 1.6 1.4 1.6 1.4 1.6]
@@ -432,8 +496,8 @@ is_pdl $b_bad->dvrs(ones(6) * .5), pdl( 'BAD -1.17741002251547 -1.17741002251547
    [1.5 1.4 1.6 1.4 1.6 1.4 1.6 1.4 1.6]
    [1.3 1.2 1.4 1.2 1.4 1.2 1.4 1.2 1.4]
    [1.5 1.4 1.6 1.4 1.6 1.4 1.6 1.4 1.6]
-  ]';
-  my %m = $data->flat->anova(sequence(9)->dummy(1,21)->flat);
+  ]')->flat;
+  my %m = $data->anova(my $iv = sequence(9)->dummy(1,21)->flat);
   test_stats_cmp(\%m, {
     '| IV_0 | ms' => 0.21,
     '| IV_0 | ss' => 1.68,
@@ -511,6 +575,24 @@ is_pdl pdl([1,1,1], [2,2,2])->stddz, zeroes(3,2), 'stddz nan vs bad';
   my $d = pdl qw( 3 2 1 5 2 1 5 3 1 4 1 2 3 5 5 );
   my $s = sequence(5)->dummy(1,3)->flat;
   my $a = qsort sequence(15) % 3;
+  my $dsgn = $d->anova_design_matrix($s, $a, {plot=>0});
+  is_pdl $dsgn, pdl '
+ [1  1  0  1  0  0  0]
+ [1  1  0  0  1  0  0]
+ [1  1  0  0  0  1  0]
+ [1  1  0  0  0  0  1]
+ [1  1  0 -1 -1 -1 -1]
+ [1  0  1  1  0  0  0]
+ [1  0  1  0  1  0  0]
+ [1  0  1  0  0  1  0]
+ [1  0  1  0  0  0  1]
+ [1  0  1 -1 -1 -1 -1]
+ [1 -1 -1  1  0  0  0]
+ [1 -1 -1  0  1  0  0]
+ [1 -1 -1  0  0  1  0]
+ [1 -1 -1  0  0  0  1]
+ [1 -1 -1 -1 -1 -1 -1]
+';
   my %m = $d->anova_rptd($s, $a, {plot=>0});
   $m{$_} = $m{$_}->squeeze for '# IV_0 # m';
   test_stats_cmp(\%m, {
@@ -617,8 +699,36 @@ $anova_ans_l2_common{"| within ~ between || err $_"} = $anova_ans_l2_common{"| w
   my $s = pdl '[0 0 0 1 1 1 2 2 2 3 3 3 4 4 4 5 5 5 6 6 6 7 7 7]';
   my $w = pdl '[0 1 2 0 1 2 0 1 2 0 1 2 0 1 2 0 1 2 0 1 2 0 1 2]';
   my $b = pdl '[0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1]';
-  my %m = $d->anova_rptd($s,$w,$b,{ivnm=>['within','between'],btwn=>[1],plot=>0, v=>0});
+  my @idv = qw(within between);
+  my %m = $d->anova_rptd($s,$w,$b,{ivnm=>\@idv,btwn=>[1],plot=>0, v=>0});
   test_stats_cmp(\%m, \%anova_ans_l2_common);
+  my $dsgn = $d->anova_design_matrix($s,$w,$b,{ivnm=>\@idv,btwn=>[1],v=>0});
+  is_pdl $dsgn, pdl '
+ [1  1  0  1  1  0  1  0  0  0  0  0]
+ [1  0  1  1  0  1  1  0  0  0  0  0]
+ [1 -1 -1  1 -1 -1  1  0  0  0  0  0]
+ [1  1  0  1  1  0  0  1  0  0  0  0]
+ [1  0  1  1  0  1  0  1  0  0  0  0]
+ [1 -1 -1  1 -1 -1  0  1  0  0  0  0]
+ [1  1  0  1  1  0  0  0  1  0  0  0]
+ [1  0  1  1  0  1  0  0  1  0  0  0]
+ [1 -1 -1  1 -1 -1  0  0  1  0  0  0]
+ [1  1  0  1  1  0 -1 -1 -1  0  0  0]
+ [1  0  1  1  0  1 -1 -1 -1  0  0  0]
+ [1 -1 -1  1 -1 -1 -1 -1 -1  0  0  0]
+ [1  1  0 -1 -1  0  0  0  0 -1  0  0]
+ [1  0  1 -1  0 -1  0  0  0 -1  0  0]
+ [1 -1 -1 -1  1  1  0  0  0 -1  0  0]
+ [1  1  0 -1 -1  0  0  0  0  0 -1  0]
+ [1  0  1 -1  0 -1  0  0  0  0 -1  0]
+ [1 -1 -1 -1  1  1  0  0  0  0 -1  0]
+ [1  1  0 -1 -1  0  0  0  0  0  0 -1]
+ [1  0  1 -1  0 -1  0  0  0  0  0 -1]
+ [1 -1 -1 -1  1  1  0  0  0  0  0 -1]
+ [1  1  0 -1 -1  0  0  0  0  1  1  1]
+ [1  0  1 -1  0 -1  0  0  0  1  1  1]
+ [1 -1 -1 -1  1  1  0  0  0  1  1  1]
+';
 }
 my %anova_ans_l3_common = (
   '| within | df'           =>  2,
@@ -678,6 +788,57 @@ if (0) { # FIXME
   test_stats_cmp(\%m, $exp);
   my $inds_by_i_t_subj = PDL::glue(0, map $_->t, $b, $w, $s)->qsortveci;
   $_ = $_->index($inds_by_i_t_subj) for $d, $s, $b, $w;
+  my $dsgn = $d->anova_design_matrix($s,$b,$w,{ivnm=>\@idv,btwn=>[0],v=>0});
+  is_pdl $dsgn, pdl '
+ [1  1  1  0  1  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  1  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  0  1  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  0  0  1  0  0  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  0  0  0  1  0  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  0  0  0  0  1  0  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0  0  0  0  0  0  0  1  0  0  0  0  0  0  0]
+ [1  1  1  0  1  0 -1 -1 -1 -1 -1 -1 -1  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  1  0  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  1  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  0  1  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  0  0  1  0  0  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  0  0  0  1  0  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  0  0  0  0  1  0  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1  0  0  0  0  0  0  1  0  0  0  0  0  0  0]
+ [1  1  0  1  0  1 -1 -1 -1 -1 -1 -1 -1  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  1  0  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  1  0  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  0  1  0  0  0  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  0  0  1  0  0  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  0  0  0  1  0  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  0  0  0  0  1  0  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1  0  0  0  0  0  0  1  0  0  0  0  0  0  0]
+ [1  1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1  0  0  0  0  0  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0 -1  0  0  0  0  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0 -1  0  0  0  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0  0 -1]
+ [1 -1  1  0 -1  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0 -1  0  0  0  0  0  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0 -1  0  0  0  0  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  0  0  0  0  0  0 -1]
+ [1 -1  0  1  0 -1  0  0  0  0  0  0  0  1  1  1  1  1  1  1]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0 -1  0  0  0  0  0  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0 -1  0  0  0  0  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0  0 -1  0  0  0  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0  0  0 -1  0  0  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0  0  0  0 -1  0  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0  0  0  0  0 -1  0]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  0  0  0  0  0  0 -1]
+ [1 -1 -1 -1  1  1  0  0  0  0  0  0  0  1  1  1  1  1  1  1]
+';
   %m = $d->anova_rptd($s,$b,$w,{ivnm=>\@idv,btwn=>[0],plot=>0, v=>0});
   test_stats_cmp(\%m, $exp);
 }
